fixed padding on mobile

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -29,6 +29,9 @@ html,body{
 a{
   text-decoration: none;
 }
+.container{
+  padding: 0 20px;
+}
 
 header{
   box-shadow: 0px 4px 18px -4px rgba(0, 0, 0, 0.25);
